# pinchana-deezer

./: Dockerfile  README.md  pyproject.toml
src/pinchana_deezer/: main.py
